parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MATCH
    VEC

Grammar

Rule 0     S' -> funciones
Rule 1     funciones -> funcion funciones
Rule 2     funciones -> funcion
Rule 3     funcion -> PUB FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
Rule 4     funcion -> FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
Rule 5     funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER
Rule 6     funcion -> MODF ID LLAVEIZQ funciones LLAVEDER
Rule 7     funcion -> FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 8     funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER
Rule 9     parametros -> parametros2
Rule 10    parametros -> empty
Rule 11    parametros2 -> parametros2 COMA mutable ID DPT tipos
Rule 12    parametros2 -> mutable ID DPT tipos
Rule 13    liststruct -> liststruct COMA ID DPT tipos
Rule 14    liststruct -> ID DPT tipos
Rule 15    tipofun -> MENOS MAYOR tipos
Rule 16    tipofun -> empty
Rule 17    instrucciones -> instruccion instrucciones
Rule 18    instrucciones -> instruccion
Rule 19    instruccion -> LET mutable ID pyc arrtipos IGUAL logica PTCOMA
Rule 20    instruccion -> ID listarreglo IGUAL logica PTCOMA
Rule 21    instruccion -> ID PARIZQ listexpr PARDER PTCOMA
Rule 22    instruccion -> PRINT NOT PARIZQ listexpr PARDER PTCOMA
Rule 23    instruccion -> IF logica LLAVEIZQ instrucciones LLAVEDER unelse
Rule 24    instruccion -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 25    instruccion -> RETURN logica PTCOMA
Rule 26    instruccion -> WHILE logica LLAVEIZQ instrucciones LLAVEDER
Rule 27    instruccion -> FOR ID IN opcionfor LLAVEIZQ instrucciones LLAVEDER
Rule 28    instruccion -> BREAK PTCOMA
Rule 29    instruccion -> CONTINUE PTCOMA
Rule 30    instruccion -> BREAK logica PTCOMA
Rule 31    instruccionesexp -> instruccion instruccionesexpfin
Rule 32    instruccionesexp -> instruccionesexpfin
Rule 33    instruccionesexpfin -> instruccionesexp
Rule 34    instruccionesexpfin -> expresion
Rule 35    instruccionesexpfin -> <empty>
Rule 36    instrloop -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 37    instrif -> IF logica LLAVEIZQ instruccionesexp LLAVEDER instrelse
Rule 38    instrelse -> ELSE LLAVEIZQ instruccionesexp LLAVEDER
Rule 39    instrelse -> ELSE IF logica LLAVEIZQ instruccionesexp LLAVEDER instrelse
Rule 40    instrelse -> empty
Rule 41    opcionfor -> logica PT2 logica
Rule 42    opcionfor -> logica
Rule 43    unelse -> ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 44    unelse -> ELSE IF logica LLAVEIZQ instrucciones LLAVEDER unelse
Rule 45    unelse -> empty
Rule 46    logica -> logica AND logica
Rule 47    logica -> logica OR logica
Rule 48    logica -> NOT logica
Rule 49    logica -> rel
Rule 50    rel -> rel IGUAL IGUAL rel
Rule 51    rel -> rel MENOR rel
Rule 52    rel -> rel MAYOR rel
Rule 53    rel -> rel MEIGUAL rel
Rule 54    rel -> rel MAIGUAL rel
Rule 55    rel -> rel DIS rel
Rule 56    rel -> expresion
Rule 57    mutable -> MUT
Rule 58    mutable -> empty
Rule 59    pyc -> DPT
Rule 60    pyc -> empty
Rule 61    arrtipos -> tipos
Rule 62    arrtipos -> arreglos
Rule 63    arrtipos -> empty
Rule 64    arreglos -> CORIZQ arreglos PTCOMA ENTERO CORDER
Rule 65    arreglos -> tipos
Rule 66    arreglos -> ID
Rule 67    tipos -> I64
Rule 68    tipos -> F64
Rule 69    tipos -> BOOL
Rule 70    tipos -> CHAR
Rule 71    tipos -> STRING
Rule 72    tipos -> AMP STR
Rule 73    tipos -> USIZE
Rule 74    expresion -> expresion MAS expresion
Rule 75    expresion -> expresion MENOS expresion
Rule 76    expresion -> expresion POR expresion
Rule 77    expresion -> expresion DIVIDIDO expresion
Rule 78    expresion -> expresion MOD expresion
Rule 79    expresion -> expresion AS tipos
Rule 80    expresion -> instrif
Rule 81    expresion -> MENOS expresion
Rule 82    expresion -> PARIZQ logica PARDER
Rule 83    expresion -> ENTERO
Rule 84    expresion -> DECIMAL
Rule 85    expresion -> FORM
Rule 86    expresion -> TRUE
Rule 87    expresion -> FALSE
Rule 88    expresion -> VECM NOT listarreglo
Rule 89    expresion -> ID PARIZQ listexpr PARDER
Rule 90    expresion -> ID
Rule 91    expresion -> ID CORIZQ expresion CORDER
Rule 92    expresion -> CORIZQ listexpr CORDER
Rule 93    expresion -> CHARE
Rule 94    expresion -> expresion DPT DPT expresion
Rule 95    expresion -> AMP expresion
Rule 96    expresion -> tipos DPT DPT POW PARIZQ ENTERO COMA ENTERO PARDER
Rule 97    expresion -> tipos DPT DPT POWF PARIZQ DECIMAL COMA DECIMAL PARDER
Rule 98    expresion -> instrloop
Rule 99    expresion -> expresion PT TOSTRING PARIZQ PARDER
Rule 100   expresion -> expresion PT SQRT PARIZQ PARDER
Rule 101   expresion -> expresion PT ABS PARIZQ PARDER
Rule 102   expresion -> expresion PT CLONE PARIZQ PARDER
Rule 103   expresion -> expresion PT LEN PARIZQ PARDER
Rule 104   expresion -> expresion PT TOOWNED PARIZQ PARDER
Rule 105   listarreglo -> listarreglo CORIZQ listexpr CORDER
Rule 106   listarreglo -> empty
Rule 107   listexpr -> listexpr COMA logica
Rule 108   listexpr -> logica
Rule 109   empty -> <empty>

Terminals, with rules where they appear

ABS                  : 101
AMP                  : 72 95
AND                  : 46
AS                   : 79
BOOL                 : 69
BREAK                : 28 30
CHAR                 : 70
CHARE                : 93
CLONE                : 102
COMA                 : 11 13 96 97 107
CONTINUE             : 29
CORDER               : 64 91 92 105
CORIZQ               : 64 91 92 105
DECIMAL              : 84 97 97
DIS                  : 55
DIVIDIDO             : 77
DPT                  : 11 12 13 14 59 94 94 96 96 97 97
ELSE                 : 38 39 43 44
ENTERO               : 64 83 96 96
F64                  : 68
FALSE                : 87
FN                   : 3 4 7
FOR                  : 27
FORM                 : 85
I64                  : 67
ID                   : 3 4 5 6 8 11 12 13 14 19 20 21 27 66 89 90 91
IF                   : 23 37 39 44
IGUAL                : 19 20 50 50
IN                   : 27
LEN                  : 103
LET                  : 19
LLAVEDER             : 3 4 5 6 7 8 23 24 26 27 36 37 38 39 43 44
LLAVEIZQ             : 3 4 5 6 7 8 23 24 26 27 36 37 38 39 43 44
LOOP                 : 24 36
MAIGUAL              : 54
MAIN                 : 7
MAS                  : 74
MATCH                : 
MAYOR                : 15 52
MEIGUAL              : 53
MENOR                : 51
MENOS                : 15 75 81
MOD                  : 78
MODF                 : 5 6
MUT                  : 57
NOT                  : 22 48 88
OR                   : 47
PARDER               : 3 4 7 21 22 82 89 96 97 99 100 101 102 103 104
PARIZQ               : 3 4 7 21 22 82 89 96 97 99 100 101 102 103 104
POR                  : 76
POW                  : 96
POWF                 : 97
PRINT                : 22
PT                   : 99 100 101 102 103 104
PT2                  : 41
PTCOMA               : 19 20 21 22 25 28 29 30 64
PUB                  : 3 5
RETURN               : 25
SQRT                 : 100
STR                  : 72
STRING               : 71
STRUCT               : 8
TOOWNED              : 104
TOSTRING             : 99
TRUE                 : 86
USIZE                : 73
VEC                  : 
VECM                 : 88
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

arreglos             : 62 64
arrtipos             : 19
empty                : 10 16 40 45 58 60 63 106
expresion            : 34 56 74 74 75 75 76 76 77 77 78 78 79 81 91 94 94 95 99 100 101 102 103 104
funcion              : 1 2
funciones            : 1 5 6 0
instrelse            : 37 39
instrif              : 80
instrloop            : 98
instruccion          : 17 18 31
instrucciones        : 3 4 7 17 23 24 26 27 36 43 44
instruccionesexp     : 33 37 38 39
instruccionesexpfin  : 31 32
listarreglo          : 20 88 105
listexpr             : 21 22 89 92 105 107
liststruct           : 8 13
logica               : 19 20 23 25 26 30 37 39 41 41 42 44 46 46 47 47 48 82 107 108
mutable              : 11 12 19
opcionfor            : 27
parametros           : 3 4
parametros2          : 9 11
pyc                  : 19
rel                  : 49 50 50 51 51 52 52 53 53 54 54 55 55
tipofun              : 3 4
tipos                : 11 12 13 14 15 61 65 79 96 97
unelse               : 23 44

Parsing method: LALR

state 0

    (0) S' -> . funciones
    (1) funciones -> . funcion funciones
    (2) funciones -> . funcion
    (3) funcion -> . PUB FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (4) funcion -> . FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (5) funcion -> . PUB MODF ID LLAVEIZQ funciones LLAVEDER
    (6) funcion -> . MODF ID LLAVEIZQ funciones LLAVEDER
    (7) funcion -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) funcion -> . STRUCT ID LLAVEIZQ liststruct LLAVEDER

    PUB             shift and go to state 3
    FN              shift and go to state 4
    MODF            shift and go to state 5
    STRUCT          shift and go to state 6

    funciones                      shift and go to state 1
    funcion                        shift and go to state 2

state 1

    (0) S' -> funciones .



state 2

    (1) funciones -> funcion . funciones
    (2) funciones -> funcion .
    (1) funciones -> . funcion funciones
    (2) funciones -> . funcion
    (3) funcion -> . PUB FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (4) funcion -> . FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (5) funcion -> . PUB MODF ID LLAVEIZQ funciones LLAVEDER
    (6) funcion -> . MODF ID LLAVEIZQ funciones LLAVEDER
    (7) funcion -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) funcion -> . STRUCT ID LLAVEIZQ liststruct LLAVEDER

    $end            reduce using rule 2 (funciones -> funcion .)
    LLAVEDER        reduce using rule 2 (funciones -> funcion .)
    PUB             shift and go to state 3
    FN              shift and go to state 4
    MODF            shift and go to state 5
    STRUCT          shift and go to state 6

    funcion                        shift and go to state 2
    funciones                      shift and go to state 7

state 3

    (3) funcion -> PUB . FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (5) funcion -> PUB . MODF ID LLAVEIZQ funciones LLAVEDER

    FN              shift and go to state 8
    MODF            shift and go to state 9


state 4

    (4) funcion -> FN . ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (7) funcion -> FN . MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 10
    MAIN            shift and go to state 11


state 5

    (6) funcion -> MODF . ID LLAVEIZQ funciones LLAVEDER

    ID              shift and go to state 12


state 6

    (8) funcion -> STRUCT . ID LLAVEIZQ liststruct LLAVEDER

    ID              shift and go to state 13


state 7

    (1) funciones -> funcion funciones .

    $end            reduce using rule 1 (funciones -> funcion funciones .)
    LLAVEDER        reduce using rule 1 (funciones -> funcion funciones .)


state 8

    (3) funcion -> PUB FN . ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 14


state 9

    (5) funcion -> PUB MODF . ID LLAVEIZQ funciones LLAVEDER

    ID              shift and go to state 15


state 10

    (4) funcion -> FN ID . PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 16


state 11

    (7) funcion -> FN MAIN . PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 17


state 12

    (6) funcion -> MODF ID . LLAVEIZQ funciones LLAVEDER

    LLAVEIZQ        shift and go to state 18


state 13

    (8) funcion -> STRUCT ID . LLAVEIZQ liststruct LLAVEDER

    LLAVEIZQ        shift and go to state 19


state 14

    (3) funcion -> PUB FN ID . PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 20


state 15

    (5) funcion -> PUB MODF ID . LLAVEIZQ funciones LLAVEDER

    LLAVEIZQ        shift and go to state 21


state 16

    (4) funcion -> FN ID PARIZQ . parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (9) parametros -> . parametros2
    (10) parametros -> . empty
    (11) parametros2 -> . parametros2 COMA mutable ID DPT tipos
    (12) parametros2 -> . mutable ID DPT tipos
    (109) empty -> .
    (57) mutable -> . MUT
    (58) mutable -> . empty

    PARDER          reduce using rule 109 (empty -> .)
    ID              reduce using rule 109 (empty -> .)
    MUT             shift and go to state 26

    parametros                     shift and go to state 22
    parametros2                    shift and go to state 23
    empty                          shift and go to state 24
    mutable                        shift and go to state 25

state 17

    (7) funcion -> FN MAIN PARIZQ . PARDER LLAVEIZQ instrucciones LLAVEDER

    PARDER          shift and go to state 27


state 18

    (6) funcion -> MODF ID LLAVEIZQ . funciones LLAVEDER
    (1) funciones -> . funcion funciones
    (2) funciones -> . funcion
    (3) funcion -> . PUB FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (4) funcion -> . FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (5) funcion -> . PUB MODF ID LLAVEIZQ funciones LLAVEDER
    (6) funcion -> . MODF ID LLAVEIZQ funciones LLAVEDER
    (7) funcion -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) funcion -> . STRUCT ID LLAVEIZQ liststruct LLAVEDER

    PUB             shift and go to state 3
    FN              shift and go to state 4
    MODF            shift and go to state 5
    STRUCT          shift and go to state 6

    funciones                      shift and go to state 28
    funcion                        shift and go to state 2

state 19

    (8) funcion -> STRUCT ID LLAVEIZQ . liststruct LLAVEDER
    (13) liststruct -> . liststruct COMA ID DPT tipos
    (14) liststruct -> . ID DPT tipos

    ID              shift and go to state 29

    liststruct                     shift and go to state 30

state 20

    (3) funcion -> PUB FN ID PARIZQ . parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (9) parametros -> . parametros2
    (10) parametros -> . empty
    (11) parametros2 -> . parametros2 COMA mutable ID DPT tipos
    (12) parametros2 -> . mutable ID DPT tipos
    (109) empty -> .
    (57) mutable -> . MUT
    (58) mutable -> . empty

    PARDER          reduce using rule 109 (empty -> .)
    ID              reduce using rule 109 (empty -> .)
    MUT             shift and go to state 26

    parametros                     shift and go to state 31
    parametros2                    shift and go to state 23
    empty                          shift and go to state 24
    mutable                        shift and go to state 25

state 21

    (5) funcion -> PUB MODF ID LLAVEIZQ . funciones LLAVEDER
    (1) funciones -> . funcion funciones
    (2) funciones -> . funcion
    (3) funcion -> . PUB FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (4) funcion -> . FN ID PARIZQ parametros PARDER tipofun LLAVEIZQ instrucciones LLAVEDER
    (5) funcion -> . PUB MODF ID LLAVEIZQ funciones LLAVEDER
    (6) funcion -> . MODF ID LLAVEIZQ funciones LLAVEDER
    (7) funcion -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (8) funcion -> . STRUCT ID LLAVEIZQ liststruct LLAVEDER

    PUB             shift and go to state 3
    FN              shift and go to state 4
    MODF            shift and go to state 5
    STRUCT          shift and go to state 6

    funciones                      shift and go to state 32
    funcion                        shift and go to state 2

state 22

    (4) funcion -> FN ID PARIZQ parametros . PARDER tipofun LLAVEIZQ instrucciones LLAVEDER

    PARDER          shift and go to state 33


state 23

    (9) parametros -> parametros2 .
    (11) parametros2 -> parametros2 . COMA mutable ID DPT tipos

    PARDER          reduce using rule 9 (parametros -> parametros2 .)
    COMA            shift and go to state 34


state 24

    (10) parametros -> empty .
    (58) mutable -> empty .

    PARDER          reduce using rule 10 (parametros -> empty .)
    ID              reduce using rule 58 (mutable -> empty .)


state 25

    (12) parametros2 -> mutable . ID DPT tipos

    ID              shift and go to state 35


state 26

    (57) mutable -> MUT .

    ID              reduce using rule 57 (mutable -> MUT .)


state 27

    (7) funcion -> FN MAIN PARIZQ PARDER . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 36


state 28

    (6) funcion -> MODF ID LLAVEIZQ funciones . LLAVEDER

    LLAVEDER        shift and go to state 37


state 29

    (14) liststruct -> ID . DPT tipos

    DPT             shift and go to state 38


state 30

    (8) funcion -> STRUCT ID LLAVEIZQ liststruct . LLAVEDER
    (13) liststruct -> liststruct . COMA ID DPT tipos

    LLAVEDER        shift and go to state 39
    COMA            shift and go to state 40


state 31

    (3) funcion -> PUB FN ID PARIZQ parametros . PARDER tipofun LLAVEIZQ instrucciones LLAVEDER

    PARDER          shift and go to state 41


state 32

    (5) funcion -> PUB MODF ID LLAVEIZQ funciones . LLAVEDER

    LLAVEDER        shift and go to state 42


state 33

    (4) funcion -> FN ID PARIZQ parametros PARDER . tipofun LLAVEIZQ instrucciones LLAVEDER
    (15) tipofun -> . MENOS MAYOR tipos
    (16) tipofun -> . empty
    (109) empty -> .

    MENOS           shift and go to state 44
    LLAVEIZQ        reduce using rule 109 (empty -> .)

    tipofun                        shift and go to state 43
    empty                          shift and go to state 45

state 34

    (11) parametros2 -> parametros2 COMA . mutable ID DPT tipos
    (57) mutable -> . MUT
    (58) mutable -> . empty
    (109) empty -> .

    MUT             shift and go to state 26
    ID              reduce using rule 109 (empty -> .)

    mutable                        shift and go to state 46
    empty                          shift and go to state 47

state 35

    (12) parametros2 -> mutable ID . DPT tipos

    DPT             shift and go to state 48


state 36

    (7) funcion -> FN MAIN PARIZQ PARDER LLAVEIZQ . instrucciones LLAVEDER
    (17) instrucciones -> . instruccion instrucciones
    (18) instrucciones -> . instruccion
    (19) instruccion -> . LET mutable ID pyc arrtipos IGUAL logica PTCOMA
    (20) instruccion -> . ID listarreglo IGUAL logica PTCOMA
    (21) instruccion -> . ID PARIZQ listexpr PARDER PTCOMA
    (22) instruccion -> . PRINT NOT PARIZQ listexpr PARDER PTCOMA
    (23) instruccion -> . IF logica LLAVEIZQ instrucciones LLAVEDER unelse
    (24) instruccion -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (25) instruccion -> . RETURN logica PTCOMA
    (26) instruccion -> . WHILE logica LLAVEIZQ instrucciones LLAVEDER
    (27) instruccion -> . FOR ID IN opcionfor LLAVEIZQ instrucciones LLAVEDER
    (28) instruccion -> . BREAK PTCOMA
    (29) instruccion -> . CONTINUE PTCOMA
    (30) instruccion -> . BREAK logica PTCOMA

    LET             shift and go to state 51
    ID              shift and go to state 52
    PRINT           shift and go to state 53
    IF              shift and go to state 54
    LOOP            shift and go to state 55
    RETURN          shift and go to state 56
    WHILE           shift and go to state 57
    FOR             shift and go to state 58
    BREAK           shift and go to state 59
    CONTINUE        shift and go to state 60

    instrucciones                  shift and go to state 49
    instruccion                    shift and go to state 50

state 37

    (6) funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .

    PUB             reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)
    FN              reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)
    MODF            reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)
    STRUCT          reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)
    $end            reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)
    LLAVEDER        reduce using rule 6 (funcion -> MODF ID LLAVEIZQ funciones LLAVEDER .)


state 38

    (14) liststruct -> ID DPT . tipos
    (67) tipos -> . I64
    (68) tipos -> . F64
    (69) tipos -> . BOOL
    (70) tipos -> . CHAR
    (71) tipos -> . STRING
    (72) tipos -> . AMP STR
    (73) tipos -> . USIZE

    I64             shift and go to state 62
    F64             shift and go to state 63
    BOOL            shift and go to state 64
    CHAR            shift and go to state 65
    STRING          shift and go to state 66
    AMP             shift and go to state 67
    USIZE           shift and go to state 68

    tipos                          shift and go to state 61

state 39

    (8) funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .

    PUB             reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)
    FN              reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)
    MODF            reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)
    STRUCT          reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)
    $end            reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)
    LLAVEDER        reduce using rule 8 (funcion -> STRUCT ID LLAVEIZQ liststruct LLAVEDER .)


state 40

    (13) liststruct -> liststruct COMA . ID DPT tipos

    ID              shift and go to state 69


state 41

    (3) funcion -> PUB FN ID PARIZQ parametros PARDER . tipofun LLAVEIZQ instrucciones LLAVEDER
    (15) tipofun -> . MENOS MAYOR tipos
    (16) tipofun -> . empty
    (109) empty -> .

    MENOS           shift and go to state 44
    LLAVEIZQ        reduce using rule 109 (empty -> .)

    tipofun                        shift and go to state 70
    empty                          shift and go to state 45

state 42

    (5) funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .

    PUB             reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)
    FN              reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)
    MODF            reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)
    STRUCT          reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)
    $end            reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)
    LLAVEDER        reduce using rule 5 (funcion -> PUB MODF ID LLAVEIZQ funciones LLAVEDER .)


state 43

    (4) funcion -> FN ID PARIZQ parametros PARDER tipofun . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 71


state 44

    (15) tipofun -> MENOS . MAYOR tipos

    MAYOR           shift and go to state 72


state 45

    (16) tipofun -> empty .

    LLAVEIZQ        reduce using rule 16 (tipofun -> empty .)


state 46

    (11) parametros2 -> parametros2 COMA mutable . ID DPT tipos

    ID              shift and go to state 73


state 47

    (58) mutable -> empty .

    ID              reduce using rule 58 (mutable -> empty .)


state 48

    (12) parametros2 -> mutable ID DPT . tipos
    (67) tipos -> . I64
    (68) tipos -> . F64
    (69) tipos -> . BOOL
    (70) tipos -> . CHAR
    (71) tipos -> . STRING
    (72) tipos -> . AMP STR
    (73) tipos -> . USIZE

    I64             shift and go to state 62
    F64             shift and go to state 63
    BOOL            shift and go to state 64
    CHAR            shift and go to state 65
    STRING          shift and go to state 66
    AMP             shift and go to state 67
    USIZE           shift and go to state 68

    tipos                          shift and go to state 74

state 49

    (7) funcion -> FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones . LLAVEDER

    LLAVEDER        shift and go to state 75


state 50

    (17) instrucciones -> instruccion . instrucciones
    (18) instrucciones -> instruccion .
    (17) instrucciones -> . instruccion instrucciones
    (18) instrucciones -> . instruccion
    (19) instruccion -> . LET mutable ID pyc arrtipos IGUAL logica PTCOMA
    (20) instruccion -> . ID listarreglo IGUAL logica PTCOMA
    (21) instruccion -> . ID PARIZQ listexpr PARDER PTCOMA
    (22) instruccion -> . PRINT NOT PARIZQ listexpr PARDER PTCOMA
    (23) instruccion -> . IF logica LLAVEIZQ instrucciones LLAVEDER unelse
    (24) instruccion -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (25) instruccion -> . RETURN logica PTCOMA
    (26) instruccion -> . WHILE logica LLAVEIZQ instrucciones LLAVEDER
    (27) instruccion -> . FOR ID IN opcionfor LLAVEIZQ instrucciones LLAVEDER
    (28) instruccion -> . BREAK PTCOMA
    (29) instruccion -> . CONTINUE PTCOMA
    (30) instruccion -> . BREAK logica PTCOMA

    LLAVEDER        reduce using rule 18 (instrucciones -> instruccion .)
    LET             shift and go to state 51
    ID              shift and go to state 52
    PRINT           shift and go to state 53
    IF              shift and go to state 54
    LOOP            shift and go to state 55
    RETURN          shift and go to state 56
    WHILE           shift and go to state 57
    FOR             shift and go to state 58
    BREAK           shift and go to state 59
    CONTINUE        shift and go to state 60

    instruccion                    shift and go to state 50
    instrucciones                  shift and go to state 76

state 51

    (19) instruccion -> LET . mutable ID pyc arrtipos IGUAL logica PTCOMA
    (57) mutable -> . MUT
    (58) mutable -> . empty
    (109) empty -> .

    MUT             shift and go to state 26
    ID              reduce using rule 109 (empty -> .)

    mutable                        shift and go to state 77
    empty                          shift and go to state 47

state 52

    (20) instruccion -> ID . listarreglo IGUAL logica PTCOMA
    (21) instruccion -> ID . PARIZQ listexpr PARDER PTCOMA
    (105) listarreglo -> . listarreglo CORIZQ listexpr CORDER
    (106) listarreglo -> . empty
    (109) empty -> .

    PARIZQ          shift and go to state 79
    IGUAL           reduce using rule 109 (empty -> .)
    CORIZQ          reduce using rule 109 (empty -> .)

    listarreglo                    shift and go to state 78
    empty                          shift and go to state 80

state 53

    (22) instruccion -> PRINT . NOT PARIZQ listexpr PARDER PTCOMA

    NOT             shift and go to state 81


state 54

    (23) instruccion -> IF . logica LLAVEIZQ instrucciones LLAVEDER unelse
    (46) logica -> . logica AND logica
    (47) logica -> . logica OR logica
    (48) logica -> . NOT logica
    (49) logica -> . rel
    (50) rel -> . rel IGUAL IGUAL rel
    (51) rel -> . rel MENOR rel
    (52) rel -> . rel MAYOR rel
    (53) rel -> . rel MEIGUAL rel
    (54) rel -> . rel MAIGUAL rel
    (55) rel -> . rel DIS rel
    (56) rel -> . expresion
    (74) expresion -> . expresion MAS expresion
    (75) expresion -> . expresion MENOS expresion
    (76) expresion -> . expresion POR expresion
    (77) expresion -> . expresion DIVIDIDO expresion
    (78) expresion -> . expresion MOD expresion
    (79) expresion -> . expresion AS tipos
    (80) expresion -> . instrif
    (81) expresion -> . MENOS expresion
    (82) expresion -> . PARIZQ logica PARDER
    (83) expresion -> . ENTERO
    (84) expresion -> . DECIMAL
    (85) expresion -> . FORM
    (86) expresion -> . TRUE
    (87) expresion -> . FALSE
    (88) expresion -> . VECM NOT listarreglo
    (89) expresion -> . ID PARIZQ listexpr PARDER
    (90) expresion -> . ID
    (91) expresion -> . ID CORIZQ expresion CORDER
    (92) expresion -> . CORIZQ listexpr CORDER
    (93) expresion -> . CHARE
    (94) expresion -> . expresion DPT DPT expresion
    (95) expresion -> . AMP expresion
    (96) expresion -> . tipos DPT DPT POW PARIZQ ENTERO COMA ENTERO PARDER
    (97) expresion -> . tipos DPT DPT POWF PARIZQ DECIMAL COMA DECIMAL PARDER
    (98) expresion -> . instrloop
    (99) expresion -> . expresion PT TOSTRING PARIZQ PARDER
    (100) expresion -> . expresion PT SQRT PARIZQ PARDER
    (101) expresion -> . expresion PT ABS PARIZQ PARDER
    (102) expresion -> . expresion PT CLONE PARIZQ PARDER
    (103) expresion -> . expresion PT LEN PARIZQ PARDER
    (104) expresion -> . expresion PT TOOWNED PARIZQ PARDER
    (37) instrif -> . IF logica LLAVEIZQ instruccionesexp LLAVEDER instrelse
    (67) tipos -> . I64
    (68) tipos -> . F64
    (69) tipos -> . BOOL
    (70) tipos -> . CHAR
    (71) tipos -> . STRING
    (72) tipos -> . AMP STR
    (73) tipos -> . USIZE
    (36) instrloop -> . LOOP LLAVEIZQ instrucciones LLAVEDER

    NOT             shift and go to state 84
    MENOS           shift and go to state 87
    PARIZQ          shift and go to state 90
    ENTERO          shift and go to state 91
    DECIMAL         shift and go to state 92
    FORM            shift and go to state 93
    TRUE            shift and go to state 94
    FALSE           shift and go to state 95
    VECM            shift and go to state 96
    ID              shift and go to state 97
    CORIZQ          shift and go to state 98
    CHARE           shift and go to state 99
    AMP             shift and go to state 100
    IF              shift and go to state 82
    I64             shift and go to state 62
    F64             shift and go to state 63
    BOOL            shift and go to state 64
    CHAR            shift and go to state 65
    STRING          shift and go to state 66
    USIZE           shift and go to state 68
    LOOP            shift and go to state 102

    logica                         shift and go to state 83
    rel                            shift and go to state 85
    expresion                      shift and go to state 86
    tipos                          shift and go to state 88
    instrif                        shift and go to state 89
    instrloop                      shift and go to state 101

state 55

    (24) instruccion -> LOOP . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 103


state 56
